<resources>
    <string name="app_name">TestMirror</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="enter_location">Enter Location</string>
    <string name="save">Save</string>
    <string name="no_service_connection">No Service Connection</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="complete_all_fields">Complete All Fields</string>
    <string name="email_already_exists">Email Address already exists</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="signup_success">SignUp Successful. Please Login</string>
    <string name="login_successful">Login Successful</string>
    <string name="refresh">Refresh</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="searching_for_mirrors">Searching for Mirrors</string>
    <string name="select_a_mirror">Select a Mirror to connect to</string>
    <string name="connect">Connect</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="send_pairing_code">Send Pairing Code</string>
    <string name="invalid_pairing_code">Invalid Pairing Code</string>
    <string name="rescan">Rescan</string>
    <string name="home">Home</string>
    <string name="on_demand">On Demand</string>
    <string name="live">Live</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>
    <string name="mirror">Mirror</string>
    <string name="name">Name</string>
    <string name="wifi_network">WiFi Network</string>
    <string name="connect_another_mirror">Connect Another Mirror</string>
</resources>
